app/less/responsive.less
/************** Media queries ************* */
// Todo: Better modularization

@media (max-width: @screen-md) {
  .page {
    font-size: 14px;
  }
  .heading {
    max-width: 90%;
  }
  .page3 {
    .carousel-inner {
      padding: 0;
      margin: 0 auto;
      max-width: 90%;
    }
    .portfolio .bg-light {
      margin-left: 2em;
      font-size: 1.4em;
    }
  }
  .carousel-caption {
    left: 15%;
    right: 15%;
  }
  .info-box {
    .info-box-item {
      text-align: center;
      .info-box-headline {
        font-size: 2.8em;
        margin-top: 0;
      }
      .info-box-icon {
        margin-top: 0.2em;
        font-size: 8em;
        border-radius: 50%;
      }
      .info-box-content {
        text-align: center;
      }
    }
  }
  .skill {
    margin: 2em auto 3em;
  }
  .site-header .site-header-right {
    font-size: 1.2em;
    margin-top: 0.3em;
  }
}

@media (max-width: @screen-sm) {
  .intro-img {
    max-width: 9.5em;
    margin: 0 auto 1em;
    display: block;
    border-width: 2px;
  }
  .skill {
    margin: 5em auto;
    .skill-chart {
        margin: 0 auto;
    }
  }
  .info-box {
    margin: 0 0 -1em;
    .info-box-item {
      margin: 2em auto 1em;
      text-align: center;
      .info-box-headline {
        margin-top: 0.2em;
        font-size: 3em;
        color: @color2;
      }
      .info-box-content {
        text-align: center;
        .label-default {
          color: @color3;
          background: @color2;
        }
      }
      .info-box-icon {
        border-radius: 50%;
        margin-top: 0.5em;
      }
    }
  }
  .heading {
      font-size: 1em;
      margin-bottom: 40px;
      .headline {
        text-align: left;
      }
  }
  .carousel h1 {
    font-size: 2em;
    margin-bottom: 5px;
  }
  .page3 .carousel-inner {
    margin-top: 1em;
  }
  .portfolio {
    .portfolio-img {
      img {
        max-height: 300px;
        width: auto;
      }
    }
    .portfolio-desc {
      padding-bottom: 4em;
    }
  }

  .page4 {
    margin-top: 0;
    .info-txt {
      padding: 0;
    }
  }
  .carousel-caption {
    top: 33%;
  }
  .header {
    padding-top: 55px;
  }
  .footer {
    .footer-content {
      margin: 3em auto 0;
      max-width: 600px;
      text-align: center;
      .footer-content-logo {
        display: block;
        margin: 0 auto 0.2em;
      }
      .footer-content-copy .bg-dark {
        background: transparent;
        color: inherit;
      }
      .footer-content-technology {
        margin: 3% 15% 0;
      }
      .footer-content-contact {
        margin-top: 1em;
        text-align: center;
      }
    }
    .footer-top-link {
      display: block;
    }
  }
}

@media (max-width: @screen-xs) {
  .site-header {
    .site-header-right {
      margin-top: 0.2em;
    }
    .navbar {
      min-height: 45px;
    }
  }
  .intro-img {
    max-width: 10em;
    max-height: inherit;
    width: 100%;
    height: auto;
    margin: 0 auto 10px;
    display: block;
    border-radius: 50%;
    border-width: 5px;
  }
  .heading {
    margin: 0 10px;
    font-size: 0.8em;
    .headline,
    .subline {
      font-size: 1.5em;
    }
   .headline {
    margin-bottom: 10px;
    font-size: 3em;
      .dark {
        padding: 5px 10px;
      }
    }
    .subline {
      margin: 0 0 2em;
      font-size: 1.8em;
      .light {
        width: 90%;
        display: inline-block;
        padding: 10px;
        text-align: left;
      }
    }
  }
  .portfolio {
    padding-top: 0;
    .portfolio-desc {
      margin:0 1em;
      font-size: 0.8em;
    }
  }
  .page3 {
    .carousel-inner {
      margin-top: 0;
    }
  }

  @media (max-height: 768px) {
    .carousel-caption {
      top: 5em;
    }
  }
  .welcome-photo img {
    width: 25em;
    margin-bottom: 2em;
  }
  .page {
    font-size: 14px;
  }
}

// Vertical Queries

@media (min-height: 900px) and (min-width: @screen-md) {
  .page3 {
    .carousel {
      min-height: 800px;
    }
    .portfolio > div{
      position: absolute;
      top: 20%;
    }
  }
  .page4 {
    .section-wrapper {
      margin-top: 10em;
    }
    .heading {
      padding-top: 6em;
    }
  }
}
@media (min-height: 768px) and (max-height: 899px){
  .page3 {
    .carousel {
      min-height: 580px;
    }
    .page4 .heading {
      margin-top: 3em;
    }
    @media (min-width: @screen-md) {
      .portfolio > div{
        margin-top: 5em;
      }
    }
  }
  .page4 .section-wrapper {
    margin-top: 7em;
  }
}
@media (min-height: 480px) and (max-height: 767px) {
  .page3 {
    .carousel {
      min-height: 300px;
    }
    @media (min-width: @screen-md) {
      .portfolio > div {
        margin-top: 3em;
      }
    }
  }
}
@media (max-height: 480px) {
  .page3 .carousel {
    min-height: auto;
  }
  .page4 .section-wrapper {
    margin-top: 1em;
  }
}

